# alchemy

./: CMakeLists.txt  README.md  build.bat  run.bat
cmake/: randomize_pdb_name.cmake
example/: example.c  example.h  ui_overview.c  ui_overview.h  win32_alchemy.c
examples/example/: CMakeLists.txt  example.c  example.h  main.c  ui_overview.c  ui_overview.h  win32_alchemy.c
examples/snake/: CMakeLists.txt  main.c
include/: input.h  sound.h  state.h  ui.h  window.h
include/alchemy/: input.h  sound.h  state.h  window.h
include/alchemy/renderer/: font.h  renderer.h  shader.h  sprite.h  texture.h  ui.h
include/alchemy/util/: file.h  intrin.h  log.h  math.h  memory.h  str.h  time.h  types.h
include/platform/windows/: win32_sound.h
include/renderer/: font.h  renderer.h  shader.h  sprite.h  texture.h  ui.h
include/util/: alchemy_math.h  alchemy_memory.h  types.h
lib/freetype/include/freetype/: freetype.h
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/nuklear/: nuklear.c  nuklear.h
lib/stb_image/: stb_image.c
res/cursors/: sword.ani
res/shaders/: border.fs  font.frag  font.fs  font.vs  framebuffer.frag  framebuffer.vs  poly.frag  poly.fs  poly.vert  poly.vs  sprite.frag  sprite.vert  ui.fs  ui.vs
src/: example.c  example.cpp  example.h  gamepad.h  input.h  keyboard.h  mouse.h  nuklear_demo.c  nuklear_example.c  nuklear_example.h  nuklear_overview.c  sound.h  types.h  ui.c  ui.h  ui_overview.c  ui_overview.h  win32_alchemy.c  win32_alchemy.cpp
src/platform/windows/: win32_base.c  win32_file.c  win32_input.c  win32_input.cpp  win32_input.h  win32_intrin.c  win32_keyboard.cpp  win32_keyboard.h  win32_memory.c  win32_mouse.cpp  win32_mouse.h  win32_opengl.c  win32_sound.c  win32_sound.cpp  win32_sound.h  win32_state.c  win32_window.c  win32_xinput_gamepad.cpp  win32_xinput_gamepad.h
src/renderer/: font.c  font.cpp  font.h  renderer.c  shader.c  shader.cpp  shader.h  sprite.c  sprite.cpp  sprite.h  texture.c  texture.cpp  texture.h  ui.c
src/util/: log.c  time.c  time.h  timer.c  timer.h  types.h
